[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "geomorphology-mcp"
version = "1.0.0"
description = "Landform process and terrain aesthetic composition at landscape scale. Complements Powers of Ten (geographic-continental range) and Patina & Weathering (same erosion physics, different scale)."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
